@@ -2,19 +2,18 @@ package cn.leolezury.eternalstarlight.common.block.entity;
 
 import cn.leolezury.eternalstarlight.common.block.DryingRackBlock;
 import cn.leolezury.eternalstarlight.common.item.recipe.DryingRecipe;
-import cn.leolezury.eternalstarlight.common.item.recipe.DryingRecipeInput;
 import cn.leolezury.eternalstarlight.common.registry.ESBlockEntities;
 import cn.leolezury.eternalstarlight.common.registry.ESRecipes;
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.protocol.Packet;
 import net.minecraft.network.protocol.game.ClientGamePacketListener;
 import net.minecraft.network.protocol.game.ClientboundBlockEntityDataPacket;
+import net.minecraft.world.Container;
 import net.minecraft.world.ContainerHelper;
+import net.minecraft.world.SimpleContainer;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.item.crafting.RecipeManager;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.BlockEntityType;
@@ -35,7 +34,8 @@ public class DryingRackBlockEntity extends SimpleContainerBlockEntity {
 		this(ESBlockEntities.DRYING_RACK.get(), blockPos, blockState);
 	}
 
-	private final RecipeManager.CachedCheck<DryingRecipeInput, DryingRecipe> quickCheck = RecipeManager.createCheck(ESRecipes.DRYING.get());
+	private final RecipeManager.CachedCheck<Container, DryingRecipe> quickCheck = RecipeManager.createCheck(ESRecipes.DRYING.get());
+
 	private boolean lastLit;
 	private int dryingTicks = 0;
 	private NonNullList<ItemStack> items = NonNullList.withSize(1, ItemStack.EMPTY);
@@ -53,13 +53,15 @@ public class DryingRackBlockEntity extends SimpleContainerBlockEntity {
 		if (level == null) {
 			return false;
 		}
-		List<RecipeHolder<DryingRecipe>> list = level.getRecipeManager().getAllRecipesFor(ESRecipes.DRYING.get());
-		for (RecipeHolder<DryingRecipe> holder : list) {
-			DryingRecipe recipe = holder.value();
+		List<DryingRecipe> list = level.getRecipeManager().getAllRecipesFor(ESRecipes.DRYING.get())
+			.stream()
+			.toList();
+		for (DryingRecipe recipe : list) {
 			if (fireBelow == recipe.fireBelow() && recipe.input().test(stack)) {
 				return true;
 			}
 		}
+
 		return false;
 	}
 
@@ -71,9 +73,11 @@ public class DryingRackBlockEntity extends SimpleContainerBlockEntity {
 					entity.dryingTicks = 0;
 					entity.lastLit = lit;
 				}
-				Optional<RecipeHolder<DryingRecipe>> optionalRecipe = entity.quickCheck.getRecipeFor(new DryingRecipeInput(entity.items.getFirst(), lit), level);
+				SimpleContainer container = new SimpleContainer(entity.items.get(0));
+				Optional<DryingRecipe> optionalRecipe = entity.quickCheck.getRecipeFor(container, level);
 				if (optionalRecipe.isPresent()) {
-					DryingRecipe recipe = optionalRecipe.get().value();
+					DryingRecipe recipe = optionalRecipe.get();
+
 					entity.dryingTicks++;
 					if (entity.dryingTicks > recipe.durationTicks()) {
 						entity.dryingTicks = 0;
@@ -95,8 +99,8 @@ public class DryingRackBlockEntity extends SimpleContainerBlockEntity {
 	}
 
 	@Override
-	public CompoundTag getUpdateTag(HolderLookup.Provider provider) {
-		return saveWithFullMetadata(provider);
+	public CompoundTag getUpdateTag() {
+		return this.saveWithFullMetadata();
 	}
 
 	@Override
@@ -108,18 +112,20 @@ public class DryingRackBlockEntity extends SimpleContainerBlockEntity {
 	}
 
 	@Override
-	public void loadAdditional(CompoundTag compoundTag, HolderLookup.Provider provider) {
-		super.loadAdditional(compoundTag, provider);
-		this.dryingTicks = compoundTag.getInt(TAG_DRYING_TICKS);
+	public void load(CompoundTag tag) {
+		super.load(tag);
+
+		this.dryingTicks = tag.getInt(TAG_DRYING_TICKS);
 		this.items = NonNullList.withSize(this.getContainerSize(), ItemStack.EMPTY);
-		ContainerHelper.loadAllItems(compoundTag, this.items, provider);
+		ContainerHelper.loadAllItems(tag, this.items);
 	}
 
 	@Override
-	protected void saveAdditional(CompoundTag compoundTag, HolderLookup.Provider provider) {
-		super.saveAdditional(compoundTag, provider);
-		compoundTag.putInt(TAG_DRYING_TICKS, this.dryingTicks);
-		ContainerHelper.saveAllItems(compoundTag, this.items, provider);
+	protected void saveAdditional(CompoundTag tag) {
+		super.saveAdditional(tag);
+
+		tag.putInt(TAG_DRYING_TICKS, this.dryingTicks);
+		ContainerHelper.saveAllItems(tag, this.items);
 	}
 
 	@Override
